syntax = "proto3";

package grpc.webapi;

service SpatialService {
  rpc SearchEvent(EventQuery) returns (stream Event);
}

message EventQuery {
  repeated double boundary = 1;
  optional double boundaryRadius = 2;
  optional string startTime = 3;
  optional string endTime = 4;
  optional double minDepth = 5;
  optional double maxDepth = 6;
  optional double minMagnitude = 7;
  optional double maxMagnitude = 8;
  repeated string magnitudeType = 9;
}

message Event {
  optional string key = 1;
  optional string eventKey = 2;
  optional string hypocentreKey = 3;
  optional string magnitudeKey = 4;
  optional string eventType = 5;
  repeated double position = 6;
  repeated double positionUncertainty = 7;
  optional double depth = 8;
  optional double depthUncertainty = 9;
  optional string time = 10;
  optional int32 timeUncertainty = 11;
  optional int32 stationCount = 12;
  optional double magnitude = 13;
  optional string magnitudeType = 14;
  optional CreationInfo creationInfo = 15;
}

message CreationInfo {
  optional string agencyID = 1;
  optional string agencyURI = 2;
  optional string author = 3;
  optional string creationTime = 4;
  optional string version = 5;
}
